--- a/data/rush/16578.yaml
+++ b/data/rush/16578.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Each player draws 1 card, then, if both players drew by this effect, you can Set 1 "Upstart Goblin" from your Graveyard to your Spell & Trap Zone.
+    Each player draws 1 card. Then, if both players drew by this effect, you can Set 1 "Upstart Goblin" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
