--- a/data/rush/16676.yaml
+++ b/data/rush/16676.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card, then send 1 card from your hand to the Graveyard.
+    Draw 1 card. Then, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
