--- a/data/rush/16680.yaml
+++ b/data/rush/16680.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase in which this card was Normal or Special Summoned, pay 600 LP.
+    During your Main Phase that you Normal or Special Summoned this card, pay 600 LP.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set up to 1 each of "Business Card Barrage" and "Nutrient Zero" from your Graveyard to your Spell & Trap Zone. This turn, you cannot attack with non-Machine Type monsters.
+    Set 1 "Business Card Barrage" and/or 1 "Nutrient Zero" from your Graveyard in your Spell & Trap Zone. This turn, you can only attack with Machine Type monsters.
   de:
   es:
   fr:
