--- a/data/rush/16980.yaml
+++ b/data/rush/16980.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card loses 800 ATK until the end of this turn, then you can gain 800 LP.
+    This card loses 800 ATK until the end of this turn. Then, you can gain 800 LP.
   de:
   es:
   fr:
