--- a/data/rush/17198.yaml
+++ b/data/rush/17198.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Up to 2 face-up monsters on your opponent's field lose 400 ATK until the end of this turn, then you can Special Summon up to 1 each of "Clear Ice Dragon" and "Burning Blaze Dragon" from your Graveyard face-up to your field.
+    Up to 2 face-up monsters on your opponent's field lose 400 ATK until the end of this turn. Then, you can Special Summon up to 1 each of "Clear Ice Dragon" and "Burning Blaze Dragon" from your Graveyard face-up to your field.
   de:
   es:
   fr:
