--- a/data/rush/16120.yaml
+++ b/data/rush/16120.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent excavates the top 5 cards of their Deck and shows them, then your opponent places the excavated cards on the top of their Deck in the same order.
+    Your opponent excavates the top 5 cards of their Deck. Then, your opponent places the excavated cards on the top of their Deck in the same order.
   de:
   es:
   fr:
