--- a/data/rush/16331.yaml
+++ b/data/rush/16331.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all face-up monsters on your opponent's field, then inflict damage to your opponent equal to [the total original Levels of the monsters destroyed by this effect] x 100.
+    Destroy all face-up monsters on your opponent's field. Then, inflict damage to your opponent equal to [the total original Levels of the monsters destroyed by this effect] x 100.
   de:
   es:
   fr:
