--- a/data/rush/16354.yaml
+++ b/data/rush/16354.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 4 or lower Plant Type Normal Monster from your Graveyard face-up to your field, but place it on the bottom of the Deck during the End Phase.
+    Special Summon 1 Level 4 or lower Plant Type Normal Monster from your Graveyard face-up to your field, but place it on the bottom of the owner's Deck during the End Phase.
   de:
   es:
   fr:
