--- a/data/rush/16570.yaml
+++ b/data/rush/16570.yaml
@@ -45,7 +45,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    Special Summon up to 2 monsters from your hand face-up to your field, then you can destroy 1 Spell/Trap Card on your opponent's field.
+    Special Summon up to 2 monsters from your hand face-up to your field. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
