--- a/data/rush/16679.yaml
+++ b/data/rush/16679.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 WIND Attribute Normal Monster from your hand to your field face-up, then you can Special Summon 1 Level 6 or lower WIND Attribute Normal Monster from your Graveyard to your field face-up.
+    Special Summon 1 WIND Attribute Normal Monster from your hand face-up to your field. Then, you can Special Summon 1 Level 6 or lower WIND Attribute Normal Monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
