--- a/data/rush/16681.yaml
+++ b/data/rush/16681.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set up to 1 each of "Salary Slash" and "Battle Demotion" from your Graveyard to your Spell & Trap Zone.
+    Set 1 "Salary Slash" and/or 1 "Battle Demotion" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
