--- a/data/rush/16682.yaml
+++ b/data/rush/16682.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase in which this card was Normal or Special Summoned, if you have 7 or more FIRE Attribute monsters in your Graveyard.
+    You have 7 or more FIRE Attribute monsters in your Graveyard during your Main Phase that you Normal or Special Summoned this card.
   de:
   es:
   fr:
