--- a/data/rush/17010.yaml
+++ b/data/rush/17010.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Normal Monster from your Graveyard to your hand, then you can make 1 face-up monster on your opponent's field lose 1500 ATK until the end of this turn.
+    Add 1 Normal Monster from your Graveyard to your hand. Then, you can make 1 face-up monster on your opponent's field lose 1500 ATK until the end of this turn.
   de:
   es:
   fr:
