--- a/data/rush/17221.yaml
+++ b/data/rush/17221.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or 6 Normal Monster from your Graveyard face-up to your field, then you can reduce the Levels of all face-up Level 5 or higher monsters on your opponent's field by 4 until the end of this turn.
+    Special Summon 1 Level 5 or 6 Normal Monster from your Graveyard face-up to your field. Then, you can reduce the Levels of all face-up Level 5 or higher monsters on your opponent's field by 4 until the end of this turn.
   de:
   es:
   fr:
