--- a/data/rush/yugipedia1006408.yaml
+++ b/data/rush/yugipedia1006408.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに表側表示モンスター（レベル７以上）がいる場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（ドラゴン族）１体を選び、その攻撃力をターン終了時まで５００アップする。この効果で「ツインエッジ・ドラゴン」を選んだ場合、さらにその攻撃力はターン終了時まで５００アップする。
   ko:
   zh-TW:
   zh-CN:
