--- a/data/rush/16708.yaml
+++ b/data/rush/16708.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up EARTH Attribute Pyro Type monsters on your field gain 800 ATK until the end of this turn, then gain 800 LP.
+    All face-up EARTH Attribute Pyro Type monsters on your field gain 800 ATK until the end of this turn. Then, gain 800 LP.
   de:
   es:
   fr:
