--- a/data/rush/16898.yaml
+++ b/data/rush/16898.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Attack Position Level 8 or higher LIGHT Attribute monster on your field to face-up Defense Position, then you can destroy 1 face-up monster on your opponent's field with the same Type as a Normal Monster in your Graveyard.
+    Change 1 Attack Position Level 8 or higher LIGHT Attribute monster on your field to face-up Defense Position. Then, you can destroy 1 face-up monster on your opponent's field with the same Type as a Normal Monster in your Graveyard.
   de:
   es:
   fr:
