--- a/data/rush/16347.yaml
+++ b/data/rush/16347.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up LIGHT Attribute Fiend Type monster on your field gains 1000 ATK until the end of this turn, then you can change its battle position (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+    1 face-up LIGHT Attribute Fiend Type monster on your field gains 1000 ATK until the end of this turn. Then, you can change its battle position (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
   de:
   es:
   fr:
