--- a/data/rush/16586.yaml
+++ b/data/rush/16586.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card, then your opponent gains 1000 LP.
+    Draw 1 card. Then, your opponent gains 1000 LP.
   de:
   es:
   fr:
