--- a/data/rush/16614.yaml
+++ b/data/rush/16614.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 500 damage to your opponent, then, if you have a face-up Fairy Type monster on your field, you can Special Summon 1 Fairy Type monster from your hand to your field face-up.
+    Inflict 500 damage to your opponent. Then, if you have a face-up Fairy Type monster on your field, you can Special Summon 1 Fairy Type monster from your hand face-up to your field.
   de:
   es:
   fr:
