--- a/data/rush/17011.yaml
+++ b/data/rush/17011.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Fish, Sea Serpent, Thunder, or Aqua Type monster from your Graveyard face-up to your field. It loses 800 ATK until the end of this turn.
+    Special Summon 1 Fish, Sea Serpent, Thunder, or Aqua Type monster from your Graveyard face-up to your field. The monster Special Summoned by this effect loses 800 ATK until the end of this turn.
   de:
   es:
   fr:
