--- a/data/rush/17020.yaml
+++ b/data/rush/17020.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Each player with cards in their hand sends their entire hand to the Graveyard, then you can make 1 face-up monster on your field gain ATK equal to [the number of cards sent to the Graveyard by this effect] x 300 until the end of this turn.
+    Each player with cards in their hand sends their entire hand to the Graveyard. Then, you can make 1 face-up monster on your field gain ATK equal to [the number of cards sent to the Graveyard by this effect] x 300 until the end of this turn.
   de:
   es:
   fr:
