--- a/rush.yaml
+++ b/rush.yaml
@@ -30944,7 +30944,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up LIGHT Attribute Fiend Type monster on your field gains 1000 ATK until the end of this turn, then you can change its battle position (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+    1 face-up LIGHT Attribute Fiend Type monster on your field gains 1000 ATK until the end of this turn. Then, you can change its battle position (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
   de:
   es:
   fr:
@@ -34040,7 +34040,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or higher Dinosaur Type monster from your hand face-up to your field. It gains ATK equal to [the original Level of the monster sent to the Graveyard to meet the requirement] x 100 until the end of this turn.
+    Special Summon 1 Level 5 or higher Dinosaur Type monster from your hand face-up to your field. The monster Special Summoned by this effect gains ATK equal to [the original Level of the monster sent to the Graveyard to meet the requirement] x 100 until the end of this turn.
   de:
   es:
   fr:
@@ -34166,7 +34166,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card, then your opponent gains 1000 LP.
+    Draw 1 card. Then, your opponent gains 1000 LP.
   de:
   es:
   fr:
@@ -35824,7 +35824,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 500 ATK until the end of this turn, then, if your opponent's LP are at least 2000 higher than yours, that monster loses 1500 more ATK until the end of this turn.
+    1 face-up monster on your opponent's field loses 500 ATK until the end of this turn. Then, if your opponent's LP are at least 2000 higher than yours, that monster loses 1500 more ATK until the end of this turn.
   de:
   es:
   fr:
@@ -36015,7 +36015,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 500 damage to your opponent, then, if you have a face-up Fairy Type monster on your field, you can Special Summon 1 Fairy Type monster from your hand to your field face-up.
+    Inflict 500 damage to your opponent. Then, if you have a face-up Fairy Type monster on your field, you can Special Summon 1 Fairy Type monster from your hand face-up to your field.
   de:
   es:
   fr:
@@ -36080,7 +36080,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 6 or lower monster from your hand to your field face-up. The monster Special Summoned by this effect gains 500 ATK until the end of this turn. Then, if you have "Upstart Goblin" in your Graveyard, inflict 500 damage to your opponent.
+    Special Summon 1 Level 6 or lower monster from your hand face-up to your field. The monster Special Summoned by this effect gains 500 ATK until the end of this turn. Then, if you have "Upstart Goblin" in your Graveyard, inflict 500 damage to your opponent.
   de:
   es:
   fr:
@@ -39107,7 +39107,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up WIND Attribute monster with 2000 or more ATK on your field loses 500 ATK until the end of this turn, then you can destroy 1 Spell/Trap Card on your opponent's field.
+    1 face-up WIND Attribute monster with 2000 or more ATK on your field loses 500 ATK until the end of this turn. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
@@ -39698,7 +39698,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up EARTH Attribute Pyro Type monsters on your field gain 800 ATK until the end of this turn, then gain 800 LP.
+    All face-up EARTH Attribute Pyro Type monsters on your field gain 800 ATK until the end of this turn. Then, gain 800 LP.
   de:
   es:
   fr:
@@ -40587,7 +40587,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a monster face-up and you have a face-up Beast Type monster on your field.
+    When your opponent Normal or Special Summons a monster face-up while you have a face-up Beast Type monster on your field.
   de:
   es:
   fr:
@@ -40601,7 +40601,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 1000 ATK until the end of this turn, then you can Special Summon 1 Level 1 Beast Type Normal Monster from your Graveyard to your field face-up.
+    1 face-up monster on your opponent's field loses 1000 ATK until the end of this turn. Then, you can Special Summon 1 Level 1 Beast Type Normal Monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -44375,7 +44375,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Attack Position Level 8 or higher LIGHT Attribute monster on your field to face-up Defense Position, then you can destroy 1 face-up monster on your opponent's field with the same Type as a Normal Monster in your Graveyard.
+    Change 1 Attack Position Level 8 or higher LIGHT Attribute monster on your field to face-up Defense Position. Then, you can destroy 1 face-up monster on your opponent's field with the same Type as a Normal Monster in your Graveyard.
   de:
   es:
   fr:
@@ -51114,7 +51114,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Fish, Sea Serpent, Thunder, or Aqua Type monster from your Graveyard face-up to your field. It loses 800 ATK until the end of this turn.
+    Special Summon 1 Fish, Sea Serpent, Thunder, or Aqua Type monster from your Graveyard face-up to your field. The monster Special Summoned by this effect loses 800 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -51722,7 +51722,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Each player with cards in their hand sends their entire hand to the Graveyard, then you can make 1 face-up monster on your field gain ATK equal to [the number of cards sent to the Graveyard by this effect] x 300 until the end of this turn.
+    Each player with cards in their hand sends their entire hand to the Graveyard. Then, you can make 1 face-up monster on your field gain ATK equal to [the number of cards sent to the Graveyard by this effect] x 300 until the end of this turn.
   de:
   es:
   fr:
@@ -53766,7 +53766,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Normal Monster from your hand or Graveyard face-up to your field. This turn, the monster Special Summoned by this effect gains 700 ATK, and cannot be destroyed by an opponent's Trap Card effects.
+    Special Summon 1 Level 7 Normal Monster from your hand or Graveyard face-up to your field. This turn, the monster Special Summoned by this effect gains 700 ATK and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
