--- a/data/cards/23213239.yaml
+++ b/data/cards/23213239.yaml
@@ -3,7 +3,7 @@ password: 23213239
 name:
   en: Danger! Disturbance! Disorder!
   de: Gefahr! Störung! Unordnung!
-  es: ¡Peligro! ¡Disturbio! ¡Desorden!<
+  es: ¡Peligro! ¡Disturbio! ¡Desorden!
   fr: Danger ! Troubles ! Émeute !
   it: Pericolo! Perturbazione! Disordine!
   pt: Perigo! Perturbação! Desordem!
