--- a/data/cards/02314238.yaml
+++ b/data/cards/02314238.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Si controlas un "Mago Oscuro": destruye todas las Mágicas y Trampas que controle tu adversario.
   fr: |-
-    Si vous contrôlez "Magicien Sombre" : détruisez toutes les Magies/Pièges contrôlés par votre adversaire.
+    Si vous contrôlez "Magicien Sombre" : détruisez tous les Magies/Pièges contrôlés par votre adversaire.
   it: |-
     Se controlli "Mago Nero": distruggi tutte le Magie e Trappole controllate dal tuo avversario.
   pt: |-
