--- a/data/cards/02468169.yaml
+++ b/data/cards/02468169.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Una delle poche persone che ha dimestichezza con i Talismani. La sua storia è un mistero.
   pt: |-
-    Uma das poucas pessoas que tem um bom controlo sobre Talismãs. A sua história é um mistério.
+    Uma das poucas pessoas que tem um bom controle sobre Talismãs. A sua história é um mistério.
   ja: |-
     封印の呪符を使いこなす事ができる数少ない人物。その経歴は未だ謎に包まれている。
   ko: |-
