--- a/data/cards/05600127.yaml
+++ b/data/cards/05600127.yaml
@@ -6,7 +6,7 @@ name:
   es: Dragón Gusano Humanoide
   fr: Ver Drakonien Humanoïde
   it: Drago-Verme Umanoide
-  pt:
+  pt: Dragonete-Lombriga Humanoide
   ja: ヒューマノイド・ドレイク
   ja_romaji: Hyūmanoido Doreiku
   ko: 휴머노이드 웜 드레이크
@@ -17,14 +17,15 @@ text:
   en: |-
     "Worm Drake" + "Humanoid Slime"
   de: |-
-    "Drachenwurm" + "Menschlicher Schleim"
+    „Drachenwurm“ + „Menschlicher Schleim“
   es: |-
     "Dragón Gusano" + "Gelatina Humanoide"
   fr: |-
     "Ver Drakonien" + "Gélatine Humanoïde"
   it: |-
     "Drago-Verme" + "Melma Umanoide"
-  pt:
+  pt: |-
+    "Dragonete-Lombriga" + "Limo Humanoide"
   ja: |-
     「ワームドレイク」＋「ヒューマノイド・スライム」
   ko: |-
