--- a/data/cards/08085950.yaml
+++ b/data/cards/08085950.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 燃烧龙
 text:
   en: |-
-    If your opponent controls 2 or more monsters: You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can discard 1 Spell; destroy all Spells and Traps on the field. You can only use each effect of "Burning Dragon" once per turn.
+    If your opponent controls 2 or more monsters and this card is in your hand: You can Special Summon this card. If this card is Normal or Special Summoned: You can discard 1 Spell; destroy all Spells and Traps on the field. You can only use each effect of "Burning Dragon" once per turn.
   de:
   es:
   fr:
@@ -45,7 +45,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 924879
