--- a/data/cards/08131171.yaml
+++ b/data/cards/08131171.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     During your Standby Phase, if this card is in your GY: You can return it to your hand, also banish 1 "Sinister Serpent" from your GY during your opponent's next End Phase. You can only use this effect of "Sinister Serpent" once per turn.
   de: |-
-    Während deiner Standby Phase, falls sich diese Karte in deinem Friedhof befindet: Du kannst sie deiner Hand hinzufügen, zusätzlich verbanne während der nächsten End Phase deines Gegners 1 „Unheil verkündende Schlange“ von deinem Friedhof. Du kannst diesen Effekt von „Unheil verkündende Schlange“ nur einmal pro Spielzug verwenden.
+    Während deiner Standby Phase, falls sich diese Karte in deinem Friedhof befindet: Du kannst sie auf deine Hand zurückgeben, zusätzlich verbanne während der nächsten End Phase deines Gegners 1 „Unheil verkündende Schlange“ von deinem Friedhof. Du kannst diesen Effekt von „Unheil verkündende Schlange“ nur einmal pro Spielzug verwenden.
   es: |-
-    Durante tu Standby Phase, si esta carta está en tu Cementerio: puedes añadirla a tu mano y además, durante la próxima End Phase de tu adversario, destierra 1 "Serpiente Siniestra" en tu Cementerio. Sólo puedes usar este efecto de "Serpiente Siniestra" una vez por turno.
+    Durante tu Standby Phase, si esta carta está en tu Cementerio: puedes devolverla a tu mano y además, durante la próxima End Phase de tu adversario, destierra 1 "Serpiente Siniestra" en tu Cementerio. Sólo puedes usar este efecto de "Serpiente Siniestra" una vez por turno.
   fr: |-
-    Durant votre Standby Phase, si cette carte est dans votre Cimetière : vous pouvez l'ajouter à votre main, et aussi, bannissez 1 "Serpent Sinistre" depuis votre Cimetière durant la prochaine End Phase de votre adversaire. Vous ne pouvez utiliser cet effet de "Serpent Sinistre" qu'une fois par tour.
+    Durant votre Standby Phase, si cette carte est dans votre Cimetière : vous pouvez la renvoyer à votre main, et aussi, bannissez 1 "Serpent Sinistre" depuis votre Cimetière durant la prochaine End Phase de votre adversaire. Vous ne pouvez utiliser cet effet de "Serpent Sinistre" qu'une fois par tour.
   it: |-
-    Durante la tua Standby Phase, se questa carta è nel tuo Cimitero: puoi aggiungerla alla tua mano, inoltre bandisci 1 "Serpente Sinistro" dal tuo Cimitero durante la prossima End Phase del tuo avversario. Puoi utilizzare questo effetto di "Serpente Sinistro" una sola volta per turno.
+    Durante la tua Standby Phase, se questa carta è nel tuo Cimitero: puoi farla ritornare nella tua mano, inoltre bandisci 1 "Serpente Sinistro" dal tuo Cimitero durante la prossima End Phase del tuo avversario. Puoi utilizzare questo effetto di "Serpente Sinistro" una sola volta per turno.
   pt: |-
-    Durante sua Fase de Apoio, se este card estiver no seu Cemitério: você pode adicioná-lo à sua mão e, além disso, banir 1 "Serpente Sinistra" do seu Cemitério durante a próxima Fase Final do seu oponente. Você só pode usar este efeito de "Serpente Sinistra" uma vez por turno.
+    Durante sua Fase de Apoio, se este card estiver no seu Cemitério: você pode devolvê-lo à sua mão e, além disso, bana 1 "Serpente Sinistra" do seu Cemitério durante a próxima Fase Final do seu oponente. Você só pode usar este efeito de "Serpente Sinistra" uma vez por turno.
   ja: |-
     「キラー・スネーク」の効果は１ターンに１度しか使用できない。①：このカードが墓地に存在する場合、自分スタンバイフェイズに発動できる。このカードを手札に戻す。次の相手エンドフェイズに自分の墓地の「キラー・スネーク」１体を選んで除外する。
   ko: |-
