--- a/data/cards/21770260.yaml
+++ b/data/cards/21770260.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Once per turn, during your Standby Phase: Special Summon 1 "Slime Token" (Aqua/WATER/Level 1/ATK 500/DEF 500) in Attack Position. You cannot Summon any monsters, except "Slime Tokens" (but you can Set).
   de: |-
-    Während jeder deiner Standby Phasen: Beschwöre 1 „Schleim-Spielmarke“ (Typ Aqua/WASSER/Stufe 1/ATK 500/DEF 500) als Spezialbeschwörung in die Angriffsposition. Du kannst keine Monster beschwören, außer „Schleim-Spielmarken“ (aber du kannst setzen).
+    Einmal pro Spielzug, während deiner Standby Phase: Beschwöre 1 „Schleim-Spielmarke“ (Aqua/WASSER/Stufe 1/ATK 500/DEF 500) als Spezialbeschwörung in die Angriffsposition. Du kannst keine Monster beschwören, außer „Schleim-Spielmarken“ (aber du kannst setzen).
   es: |-
-    Durante cada una de tus Standby Phases: Invoca de Modo Especial 1 "Ficha de Gelatina" (Tipo Aqua/AGUA/Nivel 1/ATK 500/DEF 500) en Posición de Ataque. No puedes Invocar ningún monstruo excepto "Fichas de Gelatina" (pero sí puedes Colocar).
+    Una vez por turno, durante tu Standby Phase: Invoca de Modo Especial 1 "Ficha de Gelatina" (Aqua/AGUA/Nivel 1/ATK 500/DEF 500) en Posición de Ataque. No puedes Invocar ningún monstruo, excepto "Ficha de Gelatina" (pero sí puedes Colocar).
   fr: |-
-    Durant chacune de vos Standby Phases : Invoquez Spécialement 1 "Jeton de Slime" (Type Aqua/EAU/Niveau 1/ATK 500/DEF 500) en Position d'Attaque. Vous ne pouvez pas Invoquer de monstres ("Jeton de Slime" exclu), mais vous pouvez Poser.
+    Une fois par tour, durant votre Standby Phase : Invoquez Spécialement 1 "Jeton de Slime" (Aqua/EAU/Niveau 1/ATK 500/DEF 500) en Position d'Attaque. Vous ne pouvez pas Invoquer de monstres ("Jeton de Slime" exclu), mais vous pouvez Poser.
   it: |-
-    Durante ogni tua Standby Phase: Evoca Specialmente 1 "Segna-Melma" (Tipo Acqua/ACQUA/Livello 1/ATK 500/DEF 500) in Posizione di Attacco. Non puoi Evocare nessun mostro, eccetto "Segna-Melma" (ma puoi Posizionare).
+    Una volta per turno, durante la tua Standby Phase: Evoca Specialmente 1 "Segna-Melma" (Acqua/ACQUA/Livello 1/ATK 500/DEF 500) in Posizione di Attacco. Non puoi Evocare nessun mostro, eccetto "Segna-Melma" (ma puoi Posizionare).
   pt: |-
-    Durante cada uma das suas Fases de Apoio: Invoque por Invocação-Especial 1 "Ficha de Limo" (Tipo Aqua/ÁGUA/Nível 1/ATK 500/DEF 500) em Posição de Ataque. Você não pode Invocar monstros, exceto "Fichas de Limo" (mas pode baixá-los).
+    Uma vez por turno, durante sua Fase de Apoio: Invoque por Invocação-Especial 1 "Ficha de Limo" (Aqua/ÁGUA/Nível 1/ATK 500/DEF 500) em Posição de Ataque. Você não pode Invocar monstros, exceto "Ficha de Limo" (mas pode Baixá-los).
   ja: |-
     自分のスタンバイフェイズ毎に自分のフィールド上に「スライムモンスタートークン」（水族・水・星１・攻／守５００）１体を攻撃表示で特殊召喚する。このカードが表側表示でフィールド上に存在する限り、自分はモンスターを召喚・反転召喚・特殊召喚する事はできない（「スライムモンスタートークン」を除く）。
   ko: |-
