--- a/data/cards/53046408.yaml
+++ b/data/cards/53046408.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Send any number of other Spells/Traps you control to the GY; gain 1000 LP for each card sent to the GY this way.
   de: |-
-    Lege eine beliebige Anzahl anderer Zauber- und Fallenkarten, die du kontrollierst, auf den Friedhof. Du erhältst 1000 Life Points für jede dieser Karten.
+    Lege eine beliebige Anzahl anderer Zauber/Fallen, die du kontrollierst, auf den Friedhof; du erhältst für jede Karte, die auf diese Art auf den Friedhof gelegt wird, 1000 LP.
   es: |-
-    Manda cualquier número de otras Cartas Mágicas o de Trampa que controles al Cementerio. Gana 1000 Life Points por cada carta mandada.
+    Manda al Cementerio cualquier número de otras Mágicas/Trampas que controles; gana 1000 LP por cada carta mandada al Cementerio de esta forma.
   fr: |-
-    Envoyez un nombre de votre choix d'autres Cartes Magie/Piège que vous contrôlez au Cimetière ; gagnez 1000 LP pour chaque carte envoyée au Cimetière de cette façon.
+    Envoyez un nombre de votre choix d'autres Magies/Pièges que vous contrôlez au Cimetière ; gagnez 1000 LP pour chaque carte envoyée au Cimetière de cette façon.
   it: |-
-    Manda un qualsiasi numero di altre Carte Magia e Trappola che controlli al Cimitero. Guadagni 1000 Life Points per ognuna di esse.
+    Manda un qualsiasi numero di altre Magie/Trappole che controlli al Cimitero; guadagni 1000 LP per ogni carta mandata al Cimitero in questo modo.
   pt: |-
-    Envie qualquer número de outros Cards de Magia/Armadilha que você controla para o Cemitério; ganhe 1000 PV para cada card enviado para o Cemitério desta forma.
+    Envie qualquer número de outras Magias/Armadilhas que você controla para o Cemitério; ganhe 1000 PV para cada card enviado para o Cemitério desta forma.
   ja: |-
     ①：このカード以外の自分フィールドの魔法・罠カードを任意の数だけ墓地へ送って発動できる。自分はこのカードを発動するために墓地へ送ったカードの数×１０００ＬＰ回復する。
   ko: |-
