--- a/data/cards/58324930.yaml
+++ b/data/cards/58324930.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     If this card is sent from your field to your GY by an opponent's card: Target 1 monster in your opponent's GY; banish that target.
   de: |-
-    Wenn diese Karte durch eine Karte deines Gegners vom Spielfeld auf den Friedhof gelegt wird (einschließlich durch Kampf, einen Karteneffekt oder indem sie zerstört wird), wähle 1 Monster im Friedhof deines Gegners und entferne es aus dem Spiel.
+    Falls diese Karte durch eine Karte eines Gegners von deiner Spielfeldseite auf deinen Friedhof gelegt wird: Wähle 1 Monster im Friedhof deines Gegners; verbanne jenes gewählte Ziel.
   es: |-
-    Cuando esta carta que controlas es mandada a tu Cementerio por una carta de tu adversario (ya sea por una batalla, el efecto de una carta o por ser destruida): selecciona 1 monstruo en el Cementerio de tu adversario; destierra ese objetivo.
+    Si esta carta es mandada de tu Campo a tu Cementerio por una carta del adversario: selecciona 1 monstruo en el Cementerio de tu adversario; destierra ese objetivo.
   fr: |-
-    Lorsque cette carte que vous contrôlez est envoyée à votre Cimetière par une carte de votre adversaire (au combat, par un effet de carte ou en étant détruite) : ciblez 1 monstre dans le Cimetière de votre adversaire ; bannissez la cible.
+    Si cette carte est envoyée depuis votre Terrain à votre Cimetière par une carte de l'adversaire : ciblez 1 monstre dans le Cimetière de votre adversaire ; bannissez la cible.
   it: |-
-    Quando questa carta che controlli viene mandata al tuo Cimitero da una carta del tuo avversario (in battaglia, dall'effetto di una carta o venendo distrutta): scegli come bersaglio 1 mostro nel Cimitero del tuo avversario; bandisci quel bersaglio.
+    Se questa carta viene mandata dal tuo Terreno al tuo Cimitero da una carta dell'avversario: scegli come bersaglio 1 mostro nel Cimitero del tuo avversario; bandisci quel bersaglio.
   pt: |-
-    Quando este card que você controla for enviado para o seu Cemitério por um card do oponente (seja em batalha, por um efeito de card ou ao ser destruído): escolha 1 monstro no Cemitério do seu oponente; bana o alvo.
+    Se este card for enviado do seu campo para o seu Cemitério por um card do oponente: escolha 1 monstro no Cemitério do seu oponente; bana o alvo.
   ja: |-
     このカードが相手によってフィールド上から墓地へ送られた時、相手の墓地に存在するモンスター１体を選択してゲームから除外する。
   ko: |-
