--- a/data/cards/91862578.yaml
+++ b/data/cards/91862578.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Gains 400 ATK/DEF for each card in your hand.
   de: |-
-    Erhöhe die ATK und DEF dieser Karte um 400 Punkte für jede Karte in deiner Hand.
+    Erhält für jede Karte in deiner Hand 400 ATK/DEF.
   es: |-
-    Aumenta el ATK y la DEF de esta carta en 400 puntos por cada carta en tu mano.
+    Gana 400 ATK/DEF por cada carta en tu mano.
   fr: |-
-    Augmentez l'ATK et la DEF de cette carte de 400 points pour chaque carte dans votre main.
+    Gagne 400 ATK/DEF pour chaque carte dans votre main.
   it: |-
-    Aumenta ATK e DEF di questa carta di 400 punti per ogni carta nella tua mano.
+    Guadagna 400 ATK/DEF per ogni carta nella tua mano.
   pt: |-
-    Aumente o ATK e o DEF deste card em 400 pontos por cada card na sua mão.
+    Ganha 400 de ATK/DEF para cada card na sua mão.
   ja: |-
     自分の手札１枚につき、このカードの攻撃力・守備力はそれぞれ４００ポイントアップする。
   ko: |-
