--- a/data/cards/95905259.yaml
+++ b/data/cards/95905259.yaml
@@ -17,13 +17,13 @@ text:
   en: |-
     Once per turn: You can declare either Spell or Trap, then target 1 Set card in your opponent's Spell & Trap Zone; look at that target, and if it is the declared card type, that card cannot be activated this turn.
   de: |-
-    Einmal pro Spielzug: Du kannst entweder Zauber oder Falle benennen und dann 1 gesetzte Karte in der Zauber- & Fallenzone deines Gegners wählen; sieh dir das gewählte Ziel an und falls es den benannten Kartentyp hat, kann die Karte in diesem Spielzug nicht aktiviert werden.
+    Einmal pro Spielzug: Du kannst entweder Zauber oder Falle deklarieren und dann 1 gesetzte Karte in der Zauber- & Fallenzone deines Gegners wählen; sieh dir jenes gewählte Ziel an und falls es den deklarierten Kartentyp hat, kann jene Karte in diesem Spielzug nicht aktiviert werden.
   es: |-
     Una vez por turno: puedes declarar Carta Mágica o de Trampa, y después seleccionar 1 carta Colocada en la Zona de Magia y Trampas de tu adversario; mira ese objetivo, y si es el tipo de carta declarado, esa carta no puede ser activada este turno.
   fr: |-
     Une fois par tour : vous pouvez déclarer soit Magie soit Piège, puis ciblez 1 carte Posée dans la Zone Magie & Piège de votre adversaire ; regardez la cible, et si elle est du type de carte déclaré, la carte ne peut pas être activée ce tour.
   it: |-
-    Una volta per turno: puoi dichiarare Magia o Trappola, poi scegliere come bersaglio 1 carta Posizionata nella Zona Carte Magia & Trappola del tuo avversario; guarda quel bersaglio e, se è del tipo di carta dichiarato, quella carta non può essere attivata in questo turno.
+    Una volta per turno: puoi dichiarare Magia oppure Trappola, poi scegliere come bersaglio 1 carta Posizionata nella Zona Magie & Trappole del tuo avversario; guarda quel bersaglio e, se è del tipo di carta dichiarato, quella carta non può essere attivata in questo turno.
   pt: |-
     Uma vez por turno: você pode declarar Magia ou Armadilha e, depois, escolher 1 card Baixado na Zona de Magias & Armadilhas do seu oponente; olhe o alvo e se ele for do tipo de card declarado, esse card não pode ser ativado neste turno.
   ja: |-
