--- a/data/cards/99789342.yaml
+++ b/data/cards/99789342.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Pay half your LP; Special Summon 1 "Dark Magician" from your Deck. You cannot Summon other monsters the turn you activate this card (but you can Normal Set).
   de: |-
-    Zahle die Hälfte deiner LP; beschwöre 1 „Dunkler Magier“ als Spezialbeschwörung von deinem Deck. Du kannst in dem Spielzug, in dem du diese Karte aktivierst, keine anderen Monster beschwören. (Aber du kannst Monster setzen.)
+    Zahle die Hälfte deiner LP; beschwöre 1 „Dunkler Magier“ als Spezialbeschwörung von deinem Deck. Du kannst in dem Spielzug, in dem du diese Karte aktivierst, keine anderen Monster beschwören (aber du kannst Normal setzen).
   es: |-
-    Paga la mitad de tus LP; Invoca de Modo Especial, desde tu Deck, 1 "Mago Oscuro". No puedes Invocar otros monstruos en el turno en el que activas esta carta (pero sí puedes Colocar).
+    Paga la mitad de tus LP; Invoca de Modo Especial, desde tu Deck, 1 "Mago Oscuro". No puedes Invocar otros monstruos en el turno en el que activas esta carta (pero puedes Colocar de Modo Normal).
   fr: |-
-    Payez la moitié de vos LP ; Invoquez Spécialement 1 "Magicien Sombre" depuis votre Deck. Vous ne pouvez pas Invoquer d'autres monstres le tour où vous activez cette carte (mais vous pouvez Poser).
+    Payez la moitié de vos LP ; Invoquez Spécialement 1 "Magicien Sombre" depuis votre Deck. Vous ne pouvez pas Invoquer d'autres monstres le tour où vous activez cette carte (mais vous pouvez Poser Normalement).
   it: |-
-    Paga la metà dei tuoi LP; Evoca Specialmente 1 "Mago Nero" dal tuo Deck. Non puoi Evocare altri mostri nel turno in cui attivi questa carta (ma puoi Posizionare).
+    Paga la metà dei tuoi LP; Evoca Specialmente 1 "Mago Nero" dal tuo Deck. Non puoi Evocare altri mostri nel turno in cui attivi questa carta (ma puoi Posizionare Normalmente).
   pt: |-
-    Pague metade dos seus PV; Invoque por Invocação-Especial 1 "Mago Negro" do seu Deck. Você não pode Invocar outros monstros no turno em que ativar este card (mas pode Baixá-los).
+    Pague metade dos seus PV; Invoque por Invocação-Especial 1 "Mago Negro" do seu Deck. Você não pode Invocar outros monstros no turno em que ativar este card (mas pode Baixá-los Normalmente).
   ja: |-
     このカードを発動するターン、自分はこのカードの効果以外ではモンスターを召喚・反転召喚・特殊召喚できない。①：ＬＰを半分払って発動できる。デッキから「ブラック・マジシャン」１体を特殊召喚する。
   ko: |-
