--- a/data/cards/03918345.yaml
+++ b/data/cards/03918345.yaml
@@ -6,7 +6,7 @@ name:
   es: Limo de Reflejo Mágico
   fr: Slime Magique
   it: Melma Rifletti-Magia
-  pt:
+  pt: Limo Mágico Refletor
   ja: マジック・スライム
   ja_romaji: Majikku Suraimu
   ko: 매직 슬라임
@@ -18,20 +18,20 @@ text:
     This card is treated as a Normal Monster while face-up on the field or in the GY. While this card is a Normal Monster on the field, you can Normal Summon it to have it become an Effect Monster with this effect.
     ● Your opponent takes any battle damage you would have taken from battles involving this card.
   de: |-
-    Diese Karte wird als ein Normales Monster behandelt, solange sie offen auf dem Spielfeld oder im Friedhof liegt. Solange diese Karte offen auf dem Spielfeld liegt, kannst du sie als Normalbeschwörung beschwören, damit sie als Effektmonster mit diesem Effekt behandelt wird:
-    ● Dein Gegner erhält allen Kampfschaden, den du aus einem Kampf mit dieser Karte erhalten hättest.
+    Diese Karte wird als Normales Monster behandelt, solange sie offen auf dem Spielfeld oder im Friedhof liegt. Solange diese Karte ein Normales Monster auf dem Spielfeld ist, kannst du sie als Normalbeschwörung beschwören, damit sie ein Effektmonster mit diesem Effekt wird.
+    ● Dein Gegner erhält den Kampfschaden, den du aus Kämpfen erhalten hättest, an denen diese Karte beteiligt ist.
   es: |-
-    Esta carta se trata como un Monstruo Normal mientras esté boca arriba en el Campo o en el Cementerio. Mientras esta carta esté boca arriba en el Campo, puedes Invocarla de Modo Normal para que se la trate como un Monstruo de Efecto con el siguiente efecto:
-    ● Tu adversario recibe todo el daño de batalla que tú hubieras recibido de una batalla que involucre a esta carta.
+    Esta carta se trata como un Monstruo Normal mientras esté boca arriba en el Campo o en el Cementerio. Mientras esta carta sea un Monstruo Normal en el Campo, puedes Invocarla de Modo Normal para que se convierta en un Monstruo de Efecto con este efecto.
+    ● Tu adversario recibe cualquier daño de batalla que tú hubieras recibido de batallas que involucren esta carta.
   fr: |-
-    Cette carte est traitée comme un Monstre Normal lorsqu'elle est face recto sur le Terrain ou se trouve dans le Cimetière. Tant que cette carte est face recto sur le Terrain, vous pouvez l'Invoquer Normalement pour la transformer en Monstre à Effet avec l'effet suivant :
-    ● Votre adversaire reçoit tous les dommages de combat que vous auriez reçus à l'issue d'un combat impliquant cette carte.
+    Cette carte est traitée comme un Monstre Normal tant qu'elle est face recto sur le Terrain ou dans le Cimetière. Tant que cette carte est un Monstre Normal sur le Terrain, vous pouvez l'Invoquer Normalement pour qu'elle devienne un Monstre à Effet avec cet effet.
+    ● Votre adversaire reçoit les dommages de combat que vous auriez dû recevoir de combats impliquant cette carte.
   it: |-
-    Questa carta è considerata come un Mostro Normale fino a quando è scoperta sul Terreno o nel Cimitero. Fino a quando questa carta è scoperta sul Terreno, puoi Evocarla tramite Evocazione Normale per considerarla come un Mostro con Effetto con questo effetto:
-    ● Il tuo avversario riceve tutto il danno da combattimento che avresti ricevuto tu in seguito ad una battaglia che coinvolge questa carta.
+    Questa carta viene considerata come un Mostro Normale mentre è scoperta sul Terreno o nel Cimitero. Mentre questa carta è un Mostro Normale sul Terreno, puoi Evocarla Normalmente per farla diventare un Mostro con Effetto con questo effetto.
+    ● Il tuo avversario subisce qualsiasi danno da combattimento che avresti subito tu da battaglie che coinvolgono questa carta.
   pt: |-
-    Esta carta é tratada como um Normal Monster enquanto virada para cima no campo ou no Cemitério. Enquanto esta carta estiver virada para cima no campo, você pode a Normal Summon para que ela seja tratada como um Effect Monster com este efeito:
-    ● O dano infligido ao controlador desta carta por batalha é infligido aos LPs do seu oponente.
+    Este card é considerado como um Monstro Normal enquanto estiver com a face para cima no campo ou no Cemitério. Enquanto este card for um Monstro Normal no campo, você pode Invocá-lo por Invocação-Normal para fazer com que ele se torne um Monstro de Efeito com este efeito.
+    ● Seu oponente sofre qualquer dano de batalha que você teria sofrido das batalhas envolvendo este card.
   ja: |-
     このカードは墓地またはフィールド上に表側表示で存在する場合、通常モンスターとして扱う。フィールド上に表側表示で存在するこのカードを通常召喚扱いとして再度召喚する事で、このカードは効果モンスター扱いとなり以下の効果を得る。● このカードが戦闘を行う事によって受けるコントローラーへの戦闘ダメージは相手が受ける。
   ko: |-
