--- a/data/cards/19312169.yaml
+++ b/data/cards/19312169.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Activate this card only if you control "Sealmaster Meisei". Trap Cards, and their effects on the field, cannot be activated. Negate all Trap effects on the field. If you do not control "Sealmaster Meisei", destroy this card.
   de: |-
-    Du kannst diese Karte nur aktivieren, wenn sich eine offene „Siegelmeister Meisei“-Karte auf deiner Spielfeldseite befindet. Solange diese Karte offen auf dem Spielfeld liegt, können Fallenkarten nicht aktiviert werden und Effekte aller offenen Fallenkarten auf dem Spielfeld werden annulliert. Wenn „Siegelmeister Meisei“ vom Spielfeld entfernt wird, zerstöre diese Karte.
+    Aktiviere diese Karte nur, falls du „Siegelmeister Meisei“ kontrollierst. Fallenkarten und ihre Effekte auf dem Spielfeld können nicht aktiviert werden. Annulliere alle Falleneffekte auf dem Spielfeld. Falls du „Siegelmeister Meisei“ nicht kontrollierst, zerstöre diese Karte.
   es: |-
-    Sólo puedes activar esta carta cuando hay un "Amo de los Sellos Meisei" boca arriba en tu Campo. Mientras esta carta permanezca boca arriba en el Campo, no se pueden activar Cartas de Trampa y los efectos de las Cartas de Trampa boca arriba son negados. Cuando el "Amo de los Sellos Meisei" es retirado del Campo, destruye esta carta.
+    Activa esta carta sólo si controlas "Amo de los Sellos Meisei". No se pueden activar Cartas de Trampa, ni sus efectos en el Campo. Niega todos los efectos de Trampas en el Campo. Si no controlas "Amo de los Sellos Meisei", destruye esta carta.
   fr: |-
-    Vous ne pouvez activer cette carte que lorsque "Meisei, Le Maître des Sceaux" est face recto sur votre Terrain. Tant que cette carte reste face recto sur le Terrain, les Cartes Piège ne peuvent pas être activées, et les effets des Cartes Piège face recto sur le Terrain sont annulés. Lorsque "Meisei, Le Maître des Sceaux" est retiré du Terrain, détruisez cette carte.
+    Activez cette carte uniquement si vous contrôlez "Meisei, Le Maître des Sceaux". Les Cartes Piège, et leurs effets sur le Terrain, ne peuvent pas être activés. Annulez tous les effets de Piège sur le Terrain. Si vous ne contrôlez pas "Meisei, Le Maître des Sceaux", détruisez cette carte.
   it: |-
-    Puoi attivare questa carta solo quando hai un "Maisei Maestro dei Sigilli" scoperto sul tuo Terreno. Fino a quando questa carta resta scoperta sul Terreno, le Carte Trappola non possono essere attivate e l'effetto delle Carte Trappola scoperte sul Terreno viene annullato. Quando "Maisei Maestro dei Sigilli" viene rimosso dal Terreno, distruggi questa carta.
+    Attiva questa carta solo se controlli "Maisei Maestro dei Sigilli". Le Carte Trappola, e i loro effetti sul Terreno, non possono essere attivati. Annulla gli effetti di tutte le Trappole sul Terreno. Se non controlli "Maisei Maestro dei Sigilli", distruggi questa carta.
   pt: |-
-    Você não pode activar este card a não ser quando existe um "Meisei, Mestre dos Selos" no seu Campo com a face para cima. Enquanto este card permanecer no Campo com a face para cima, Cards de Armadilha não podem ser activados e os efeitos de todos os Cards de Armadilha no Campo com a face para cima são anulados. Quando "Meisei, Mestre dos Selos" for destruído ou removido do Campo, destrúa este card.
+    Ative este card apenas se você controlar "Meisei, Mestre dos Selos". Os Cards de Armadilha, bem como seus efeitos no campo, não podem ser ativados. Negue todos os efeitos de Armadilha no campo. Se você não controlar "Meisei, Mestre dos Selos", destrua este card.
   ja: |-
     「封印師 メイセイ」が自分フィールド上に存在している時のみ発動する事ができる。このカードがフィールド上に存在する限り罠カードは発動できず、全てのフィールド上罠カードの効果は無効になる。「封印師 メイセイ」が自分フィールド上に存在しなくなった時、このカードを破壊する。
   ko: |-
