--- a/data/cards/21558682.yaml
+++ b/data/cards/21558682.yaml
@@ -17,11 +17,11 @@ text:
   en: |-
     When an opponent's monster declares an attack on a monster you control: You can target 1 "Revival Jam" you control; switch the attack target to that target.
   de: |-
-    Wenn ein Monster deines Gegners einen Angriff gegen ein Monster deklariert, das du kontrollierst: Du kannst 1 „Wiederbelebungsschleim“ wählen, den du kontrollierst; vertausche das Angriffsziel auf das gewählte Ziel.
+    Wenn ein Monster eines Gegners einen Angriff gegen ein Monster deklariert, das du kontrollierst: Du kannst 1 „Wiederbelebungsschleim“ wählen, den du kontrollierst; vertausche das Angriffsziel auf jenes gewählte Ziel.
   es: |-
     Cuando un monstruo de tu adversario declara un ataque a un monstruo que controles: puedes seleccionar 1 "Gelatina Reanimada" que controles; cambia el objetivo del ataque a este objetivo.
   fr: |-
-    Lorsqu'un monstre de votre adversaire déclare une attaque sur un monstre que vous contrôlez : vous pouvez cibler 1 "Spectre Revenant" que vous contrôlez ; transférez la cible de l'attaque sur la cible.
+    Lorsqu'un monstre de l'adversaire déclare une attaque sur un monstre que vous contrôlez : vous pouvez cibler 1 "Spectre Revenant" que vous contrôlez ; transférez la cible de l'attaque sur la cible.
   it: |-
     Quando un mostro dell'avversario dichiara un attacco su un mostro che controlli: puoi scegliere come bersaglio 1 "Gelatina Rianimata" che controlli; cambia il bersaglio dell'attacco su quel bersaglio.
   pt: |-
