--- a/data/cards/31709826.yaml
+++ b/data/cards/31709826.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     When this card is destroyed by battle and sent to the GY: You can pay 1000 LP; Special Summon it in Defense Position during your next Standby Phase.
   de: |-
-    Wenn diese Karte durch Kampf zerstört und auf den Friedhof gelegt wird: Du kannst 1000 Life Points zahlen; beschwöre sie während der Standby Phase deines nächsten Spielzugs als Spezialbeschwörung in die offene Verteidigungsposition.
+    Wenn diese Karte durch Kampf zerstört und auf den Friedhof gelegt wird: Du kannst 1000 LP zahlen; beschwöre sie während deiner nächsten Standby Phase als Spezialbeschwörung in die Verteidigungsposition.
   es: |-
-    Cuando esta carta es destruida en batalla y mandada al Cementerio: puedes pagar 1000 Life Points; Invócala de Modo Especial en Posición de Defensa boca arriba durante la Standby Phase de tu próximo turno.
+    Cuando esta carta es destruida en batalla y mandada al Cementerio: puedes pagar 1000 LP; Invócala de Modo Especial en Posición de Defensa durante tu próxima Standby Phase.
   fr: |-
-    Lorsque cette carte est détruite au combat et envoyée au Cimetière : vous pouvez payer 1000 Life Points ; durant la Standby Phase de votre prochain tour, Invoquez-la Spécialement en Position de Défense face recto.
+    Lorsque cette carte est détruite au combat et envoyée au Cimetière : vous pouvez payer 1000 LP ; durant votre prochaine Standby Phase, Invoquez-la Spécialement en Position de Défense.
   it: |-
-    Quando questa carta viene distrutta in battaglia e mandata al Cimitero: puoi pagare 1000 Life Point; Evocala Specialmente scoperta in Posizione di Difesa durante la Standby Phase del tuo prossimo turno.
+    Quando questa carta viene distrutta in battaglia e mandata al Cimitero: puoi pagare 1000 LP; Evocala Specialmente in Posizione di Difesa durante la tua prossima Standby Phase.
   pt: |-
-    Quando este card for destruído em batalha e enviado para o Cemitério: você pode pagar 1000 Pontos de Vida; Invoque-o por Invocação-Especial em Posição de Defesa com a face para cima durante sua próxima Fase de Apoio.
+    Quando este card for destruído em batalha e enviado para o Cemitério: você pode pagar 1000 PV; Invoque-o por Invocação-Especial em Posição de Defesa durante sua próxima Fase de Apoio.
   ja: |-
     ①：このカードが戦闘で破壊され墓地へ送られた時、１０００ＬＰを払って発動できる。次の自分スタンバイフェイズにこのカードを墓地から守備表示で特殊召喚する。
   ko: |-
