--- a/data/cards/35539880.yaml
+++ b/data/cards/35539880.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Activate this card by targeting 1 Normal Monster in your GY; Special Summon that target in Attack Position. When this card leaves the field, destroy that monster. When that monster leaves the field, destroy this card.
   de: |-
-    Wähle 1 Normales Monster von deinem Friedhof und beschwöre es als Spezialbeschwörung in die offene Angriffsposition. Wenn diese Karte vom Spielfeld entfernt wird, zerstöre das Monster. Wenn das Monster vom Spielfeld entfernt wird, zerstöre diese Karte.
+    Aktiviere diese Karte, indem du 1 Normales Monster in deinem Friedhof wählst; beschwöre jenes gewählte Ziel als Spezialbeschwörung in die Angriffsposition. Wenn diese Karte das Spielfeld verlässt, zerstöre jenes Monster. Wenn jenes Monster das Spielfeld verlässt, zerstöre diese Karte.
   es: |-
-    Selecciona 1 Monstruo Normal de tu Cementerio e Invócalo de modo Especial en Posición de Ataque boca arriba. Cuando esta carta sea retirada del Campo, destruye ese monstruo. Cuando ese monstruo sea retirado del Campo, destruye esta carta.
+    Activa esta carta seleccionando 1 Monstruo Normal en tu Cementerio; Invoca ese objetivo de Modo Especial en Posición de Ataque. Cuando esta carta deje el Campo, destruye ese monstruo. Cuando ese monstruo deje el Campo, destruye esta carta.
   fr: |-
-    Activez cette carte en ciblant 1 Monstre Normal dans votre Cimetière ; Invoquez Spécialement la cible en Position d'Attaque face recto. Lorsque cette carte quitte le Terrain, détruisez le monstre. Lorsque le monstre quitte le Terrain, détruisez cette carte.
+    Activez cette carte en ciblant 1 Monstre Normal dans votre Cimetière ; Invoquez Spécialement la cible en Position d'Attaque. Lorsque cette carte quitte le Terrain, détruisez le monstre. Lorsque le monstre quitte le Terrain, détruisez cette carte.
   it: |-
-    Scegli 1 Mostro Normale dal tuo Cimitero ed Evocalo Specialmente scoperto in Posizione d'Attacco. Quando questa carta viene rimossa dal Terreno, distruggi quel mostro. Quando quel mostro viene rimosso dal Terreno, distruggi questa carta.
+    Attiva questa carta scegliendo come bersaglio 1 Mostro Normale nel tuo Cimitero; Evoca Specialmente quel bersaglio in Posizione di Attacco. Quando questa carta lascia il Terreno, distruggi quel mostro. Quando quel mostro lascia il Terreno, distruggi questa carta.
   pt: |-
-    Selecione 1 Normal Monster do seu Cemitério e o Special Summon virado para cima na Posição de Ataque. Quando esta carta é removida do campo, destrua aquele monstro. Quando aquele monstro é removido do campo, destrua esta carta.
+    Ative este card ao escolher 1 Monstro Normal no seu Cemitério; Invoque o alvo por Invocação-Especial em Posição de Ataque. Quando este card deixar o campo, destrua esse monstro. Quando esse monstro deixar o campo, destrua este card.
   ja: |-
     自分の墓地に存在する通常モンスター１体を選択し、攻撃表示で特殊召喚する。このカードがフィールド上に存在しなくなった時、そのモンスターを破壊する。そのモンスターがフィールド上に存在しなくなった時、このカードを破壊する。
   ko: |-
