--- a/data/cards/47731128.yaml
+++ b/data/cards/47731128.yaml
@@ -3,10 +3,10 @@ password: 47731128
 name:
   en: Mei-Kou, Master of Barriers
   de: Mei-Kou, Meister der Barrieren
-  es: Mei - Kou, Amo de Barreras
-  fr: Mei-Kou Maître des Barrières
+  es: Mei-Kou, Amo de Barreras
+  fr: Mei-Kou, Maître des Barrières
   it: Mei-Kou, Maestro delle Barriere
-  pt: Mei-Kou,Mestre das Barreiras
+  pt: Mei-Kou, Mestre das Barreiras
   ja: <ruby>結<rt>けっ</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>師<rt>し</rt></ruby> メイコウ
   ja_romaji: Kekkaijutsushi Meikō
   ko: 결계술사 메이코우
@@ -17,15 +17,15 @@ text:
   en: |-
     You can Tribute this card, then target 1 face-up Continuous Spell/Trap on the field; destroy that target.
   de: |-
-    Du kannst diese Karte als Tribut anbieten, um 1 offene Permanente Zauberkarte oder Permanente Fallenkarte auf dem Spielfeld zu zerstören.
+    Du kannst diese Karte als Tribut anbieten und dann 1 offene/n Permanente/n Zauber/Falle auf dem Spielfeld wählen; zerstöre jenes gewählte Ziel.
   es: |-
-    Puedes Sacrificar esta carta para destruir 1 Carta Mágica Continua o una Carta Trampa Continua boca arriba en el Campo.
+    Puedes Sacrificar esta carta, y después seleccionar 1 Mágica/Trampa Continua boca arriba en el Campo; destruye ese objetivo.
   fr: |-
-    Vous pouvez Sacrifier cette carte pour détruire 1 Carte Magie Continue ou Piège Continu face recto sur le Terrain.
+    Vous pouvez Sacrifier cette carte, puis ciblez 1 Magie Continue/Piège Continu face recto sur le Terrain ; détruisez la cible.
   it: |-
-    Puoi offrire come Tributo questa carta per distruggere 1 Carta Magia Continua o Carta Trappola Continua scoperta sul Terreno.
+    Puoi offrire come Tributo questa carta, poi scegliere come bersaglio 1 Magia/Trappola Continua scoperta sul Terreno; distruggi quel bersaglio.
   pt: |-
-    Você pode Tributar esta carta virada para cima para destruir 1 Continuous Spell Card ou 1 Continuous Trap Card no campo.
+    Você pode oferecer este card como Tributo e, depois, escolha 1 Magia/Armadilha Contínua com a face para cima no campo; destrua o alvo.
   ja: |-
     このカードをリリースして発動できる。フィールド上に表側表示電存在する永続魔法・永続罠カード１枚を選択して破壊する。
   ko: |-
