--- a/data/cards/47961342.yaml
+++ b/data/cards/47961342.yaml
@@ -15,7 +15,10 @@ name:
   zh-CN: 转轨地点
 text:
   en: |-
-    If your opponent controls 3 or more monsters, choose 1 of them, and make your opponent send either it or all other monsters they control to the GY (their choice).
+    Choose 1 monster your opponent controls, and your opponent sends either of the following to the GY.
+    ● The chosen monster.
+    ● The other monsters they control.
+    Your opponent must control 3 or more monsters for you to activate and resolve this effect.
   de:
   es:
   fr:
@@ -57,9 +60,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716954
