--- a/data/cards/79816536.yaml
+++ b/data/cards/79816536.yaml
@@ -23,7 +23,7 @@ text:
   fr: |-
     Ajoutez 1 Monstre Normal de min. Niveau 5 depuis votre Deck à votre main.
   it: |-
-    Aggiungi alla tua mano 1 Mostro Normale di Livello 5 o superiore dal tuo Deck.
+    Aggiungi 1 Mostro Normale di Livello 5 o superiore dal tuo Deck alla tua mano.
   pt: |-
     Adicione 1 Monstro Normal de Nível 5 ou mais do seu Deck à sua mão.
   ja: |-
