--- a/data/cards/30576089.yaml
+++ b/data/cards/30576089.yaml
@@ -54,30 +54,50 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-EN004
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE004
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-DE004
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR004
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-FR004
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT004
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-IT004
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT004
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-PT004
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP004
     set_name: Battle of Chaos
