--- a/data/cards/32692693.yaml
+++ b/data/cards/32692693.yaml
@@ -49,26 +49,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN031
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: BACH-DE059
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE031
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: BACH-FR059
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR031
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: BACH-IT059
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT031
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: BACH-PT059
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT031
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: BACH-JP059
     set_name: Battle of Chaos
