--- a/data/cards/33814281.yaml
+++ b/data/cards/33814281.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-EN030
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: BACH-DE056
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-DE030
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: BACH-FR056
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-FR030
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: BACH-IT056
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-IT030
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: BACH-PT056
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-PT030
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: BACH-JP056
     set_name: Battle of Chaos
