--- a/data/cards/92133240.yaml
+++ b/data/cards/92133240.yaml
@@ -57,30 +57,50 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-EN009
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE009
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-DE009
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR009
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-FR009
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT009
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-IT009
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT009
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-PT009
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP009
     set_name: Battle of Chaos
