--- a/data/cards/94016752.yaml
+++ b/data/cards/94016752.yaml
@@ -111,6 +111,9 @@ sets:
     - Super Rare
     - Secret Rare
     - 20th Secret Rare
+  - set_number: SR14-JP032
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: SOFU-KR063
     set_name: Soul Fusion
