--- a/data/cards/94145021.yaml
+++ b/data/cards/94145021.yaml
@@ -212,6 +212,9 @@ sets:
     - Super Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: SR14-JP023
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: EXP4-KR023
     set_name: Extra Pack Volume 4
