--- a/data/cards/95471006.yaml
+++ b/data/cards/95471006.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-EN033
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: BACH-DE061
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-DE033
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: BACH-FR061
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-FR033
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: BACH-IT061
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-IT033
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: BACH-PT061
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-PT033
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: BACH-JP061
     set_name: Battle of Chaos
