--- a/data/cards/03078380.yaml
+++ b/data/cards/03078380.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN003
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE003
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE003
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR003
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR003
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT003
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT003
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT003
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT003
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP003
     set_name: Battle of Chaos
