--- a/data/cards/03355732.yaml
+++ b/data/cards/03355732.yaml
@@ -53,26 +53,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-EN006
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE006
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-DE006
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR006
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-FR006
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT006
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-IT006
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT006
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-PT006
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP006
     set_name: Battle of Chaos
