--- a/data/cards/07142724.yaml
+++ b/data/cards/07142724.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-EN028
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: BACH-DE052
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-DE028
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: BACH-FR052
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-FR028
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: BACH-IT052
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-IT028
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: BACH-PT052
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-PT028
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: BACH-JP052
     set_name: Battle of Chaos
