--- a/data/cards/11443677.yaml
+++ b/data/cards/11443677.yaml
@@ -66,26 +66,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN019
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE037
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE019
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR037
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR019
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT037
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT019
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT037
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT019
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP037
     set_name: Battle of Chaos
