--- a/data/cards/12266229.yaml
+++ b/data/cards/12266229.yaml
@@ -54,30 +54,50 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-EN017
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE034
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-DE017
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR034
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-FR017
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT034
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-IT017
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT034
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP23-PT017
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP034
     set_name: Battle of Chaos
