--- a/data/cards/31699677.yaml
+++ b/data/cards/31699677.yaml
@@ -52,26 +52,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-EN002
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE001
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-DE002
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR001
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-FR002
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT001
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-IT002
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT001
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-PT002
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP001
     set_name: Battle of Chaos
