--- a/data/cards/35659410.yaml
+++ b/data/cards/35659410.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-EN026
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE050
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-DE026
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR050
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-FR026
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT050
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-IT026
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT050
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-PT026
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP050
     set_name: Battle of Chaos
