--- a/data/cards/38628859.yaml
+++ b/data/cards/38628859.yaml
@@ -52,26 +52,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-EN010
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   de:
   - set_number: BACH-DE010
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-DE010
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   fr:
   - set_number: BACH-FR010
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-FR010
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   it:
   - set_number: BACH-IT010
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-IT010
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   pt:
   - set_number: BACH-PT010
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-PT010
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   ja:
   - set_number: BACH-JP010
     set_name: Battle of Chaos
