--- a/data/cards/39354437.yaml
+++ b/data/cards/39354437.yaml
@@ -52,26 +52,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN007
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   de:
   - set_number: BACH-DE007
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE007
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   fr:
   - set_number: BACH-FR007
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR007
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   it:
   - set_number: BACH-IT007
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT007
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   pt:
   - set_number: BACH-PT007
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT007
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   ja:
   - set_number: BACH-JP007
     set_name: Battle of Chaos
