--- a/data/cards/46123974.yaml
+++ b/data/cards/46123974.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-EN001
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DESP1
     set_name: Battle of Chaos Premiere! promotional card
@@ -65,6 +69,10 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-DE001
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FRSP1
     set_name: Battle of Chaos Premiere! promotional card
@@ -74,6 +82,10 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-FR001
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-ITSP1
     set_name: Battle of Chaos Premiere! promotional card
@@ -83,6 +95,10 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-IT001
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PTSP1
     set_name: Battle of Chaos Premiere! promotional card
@@ -92,6 +108,10 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-PT001
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: WPP3-JP015
     set_name: World Premiere Pack 2022
