--- a/data/cards/46593546.yaml
+++ b/data/cards/46593546.yaml
@@ -88,26 +88,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN023
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE044
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE023
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR044
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR023
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT044
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT023
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT044
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT023
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP044
     set_name: Battle of Chaos
