--- a/data/cards/48832775.yaml
+++ b/data/cards/48832775.yaml
@@ -67,26 +67,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN020
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   de:
   - set_number: BACH-DE038
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE020
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   fr:
   - set_number: BACH-FR038
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR020
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   it:
   - set_number: BACH-IT038
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT020
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   pt:
   - set_number: BACH-PT038
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT020
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   ja:
   - set_number: BACH-JP038
     set_name: Battle of Chaos
