--- a/data/cards/52566270.yaml
+++ b/data/cards/52566270.yaml
@@ -51,26 +51,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-EN014
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   de:
   - set_number: BACH-DE020
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-DE014
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   fr:
   - set_number: BACH-FR020
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-FR014
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   it:
   - set_number: BACH-IT020
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-IT014
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   pt:
   - set_number: BACH-PT020
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-PT014
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   ja:
   - set_number: BACH-JP020
     set_name: Battle of Chaos
