--- a/data/cards/52843699.yaml
+++ b/data/cards/52843699.yaml
@@ -53,26 +53,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-EN016
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE023
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-DE016
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR023
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-FR016
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT023
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-IT016
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT023
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-PT016
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP023
     set_name: Battle of Chaos
