--- a/data/cards/60921537.yaml
+++ b/data/cards/60921537.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-EN029
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   de:
   - set_number: BACH-DE054
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-DE029
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   fr:
   - set_number: BACH-FR054
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-FR029
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   it:
   - set_number: BACH-IT054
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-IT029
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   pt:
   - set_number: BACH-PT054
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-PT029
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   ja:
   - set_number: BACH-JP054
     set_name: Battle of Chaos
