--- a/data/cards/66961194.yaml
+++ b/data/cards/66961194.yaml
@@ -51,26 +51,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-EN005
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE005
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-DE005
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR005
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-FR005
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT005
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-IT005
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT005
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-PT005
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP005
     set_name: Battle of Chaos
