--- a/data/cards/69087397.yaml
+++ b/data/cards/69087397.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN032
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE060
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE032
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR060
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR032
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT060
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT032
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT060
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT032
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP060
     set_name: Battle of Chaos
