--- a/data/cards/71143015.yaml
+++ b/data/cards/71143015.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-EN027
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE051
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-DE027
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR051
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-FR027
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT051
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-IT027
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT051
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-PT027
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP051
     set_name: Battle of Chaos
