--- a/data/cards/73082255.yaml
+++ b/data/cards/73082255.yaml
@@ -62,26 +62,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-EN024
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE045
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-DE024
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR045
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-FR024
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT045
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-IT024
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT045
     set_name: Battle of Chaos
     rarities:
     - Secret Rare
+  - set_number: MP23-PT024
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP045
     set_name: Battle of Chaos
