--- a/data/cards/73104892.yaml
+++ b/data/cards/73104892.yaml
@@ -75,26 +75,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-EN022
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE042
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-DE022
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR042
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-FR022
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT042
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-IT022
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT042
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-PT022
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP042
     set_name: Battle of Chaos
