--- a/data/cards/74936480.yaml
+++ b/data/cards/74936480.yaml
@@ -63,26 +63,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-EN021
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE039
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-DE021
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR039
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-FR021
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT039
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-IT021
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT039
     set_name: Battle of Chaos
     rarities:
     - Super Rare
+  - set_number: MP23-PT021
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP039
     set_name: Battle of Chaos
