--- a/data/cards/85059922.yaml
+++ b/data/cards/85059922.yaml
@@ -65,26 +65,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN018
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BACH-DE036
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE018
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BACH-FR036
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR018
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BACH-IT036
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT018
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BACH-PT036
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT018
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BACH-JP036
     set_name: Battle of Chaos
