--- a/data/cards/99054885.yaml
+++ b/data/cards/99054885.yaml
@@ -52,26 +52,46 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-EN015
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BACH-DE021
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-DE015
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BACH-FR021
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-FR015
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BACH-IT021
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-IT015
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BACH-PT021
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: MP23-PT015
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BACH-JP021
     set_name: Battle of Chaos
