--- a/data/cards/57736667.yaml
+++ b/data/cards/57736667.yaml
@@ -39,6 +39,8 @@ series:
 - Mikanko
 images:
 - index: 1
+  image: MikankoDanceMayowashidori-CYAC-JP-C.png
+- index: '1.1'
   image: MikankoDanceMayowashidori-CYAC-EN-C-1E.png
 sets:
   en:
