--- a/data/cards/66401502.yaml
+++ b/data/cards/66401502.yaml
@@ -61,6 +61,8 @@ series:
 - Vanquish Soul
 images:
 - index: 1
+  image: VanquishSoulPantera-DBWS-JP-C.png
+- index: '1.1'
   image: VanquishSoulPantera-WISU-EN-UR-1E.png
 sets:
   en:
