--- a/data/cards/73578229.yaml
+++ b/data/cards/73578229.yaml
@@ -37,6 +37,8 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
+  image: PolePosition-EE3-JP-C.jpg
+- index: '1.1'
   image: PolePosition-DR3-EN-C-UE.png
 sets:
   en:
