--- a/data/cards/76615300.yaml
+++ b/data/cards/76615300.yaml
@@ -49,6 +49,8 @@ series:
 - Charmer
 images:
 - index: 1
+  image: HiitatheFireChanneler-DUNE-JP-UR.png
+- index: '1.1'
   image: HiitatheFireChanneler-DUNE-EN-UR-1E.png
 sets:
   en:
