--- a/data/cards/75771170.yaml
+++ b/data/cards/75771170.yaml
@@ -47,6 +47,8 @@ series:
 - Mikanko
 images:
 - index: 1
+  image: ArahimetheManifestedMikanko-DUNE-JP-UR.png
+- index: '1.1'
   image: ArahimetheManifestedMikanko-DUNE-EN-UR-1E.png
 sets:
   en:
