--- a/data/rush/15163.yaml
+++ b/data/rush/15163.yaml
@@ -53,6 +53,10 @@ property: Normal
 images:
 - index: 1
   image: CurtainofSparks-RDMRP1-JP-C.png
+  illustration: CurtainofSparks-DBR-JP-VG-artwork.png
+- index: '1.1'
+  image: CurtainofSparks-RDST01-KR-C.png
+  illustration: CurtainofSparks-DBR-EN-VG-artwork.png
 sets:
   ja:
   - set_number: RD/ST01-JP014
